@@ -1,16 +1,16 @@
 BIC                     Bayesian Information Criterion
+VarCorr                 Extract variance and correlation components
+VarCorr-class           Class "VarCorr"
 fixef                   Extract Fixed Effects
 gsummary                Summarize a data frame by group
 hatTrace                Extract the trace of the 'hat' matrix
-lmer                    Fit (Generalized) Linear Mixed-Effects Models
-lmer-class              Mixed Model Representations and *mer Methods
 lmList                  List of lm Objects with a Common Model
 lmList-class            Class "lmList"
+lmer                    Fit (Generalized) Linear Mixed-Effects Models
+lmer-class              Mixed Model Representations and *mer Methods
 mcmcsamp                Generate an MCMC sample
 pedigree                Pedigree Constructor
 pedigree-class          Class "pedigree"
 pooledSD                Extract pooled standard deviation
 ranef                   Extract Random Effects
 sleepstudy              Reaction times in a sleep deprivation study
-VarCorr                 Extract variance and correlation components
-VarCorr-class           Class "VarCorr"
