@@ -18,13 +18,11 @@ SEXP
     lme4_ZtZSym,
     lme4_ZtySym,
     lme4_bVarSym,
-    lme4_callSym,
     lme4_cnamesSym,
     lme4_devCompSym,
     lme4_devianceSym,
     lme4_diagSym,
     lme4_factorSym,
-    lme4_familySym,
     lme4_fixefSym,
     lme4_flistSym,
     lme4_gradCompSym,
